<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/image"
        android:layout_width="326dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        android:src="@drawable/image" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="41dp"
        android:text="@string/Bienvenido"
        android:textColor="#0d6e6a"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:text="@string/sign_in"
        android:textColor="#0d6e6a"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/forget"
        android:paddingLeft="20dp"
        android:id="@+id/username"
        android:layout_below="@+id/sign_in_text"
        android:hint="@string/email"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/forget"
        android:paddingLeft="20dp"
        android:layout_below="@+id/username"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/password"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:id="@+id/buttonRegister"
        android:layout_below="@+id/buttonLogin"
        android:text="@string/register"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>