<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/image"
        android:layout_width="326dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image"
        android:src="@drawable/image" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_margin="@android:dimen/app_icon_size"
        android:text="@string/register"
        android:textColor="#0d6e6a"
        android:textSize="45sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:paddingLeft="20dp"
        android:id="@+id/username1"
        android:layout_below="@+id/welcome"
        android:hint="@string/email"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:paddingLeft="20dp"
        android:id="@+id/email"
        android:layout_below="@+id/username1"
        android:hint="@string/email1"
        android:layout_marginTop="10sp"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/forget"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:id="@+id/password1"
        android:hint="@string/password"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/forget"
        android:paddingLeft="20dp"
        android:layout_below="@+id/password1"
        android:id="@+id/repassword1"
        android:hint="@string/confirm_password"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:id="@+id/buttonRegister1"
        android:layout_below="@+id/repassword1"
        android:text="@string/register"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>